--- a/views/livros.ejs
+++ b/views/livros.ejs
@@ -23,7 +23,8 @@
                         </div>
                     </div>
                 </div>
-        
+
+                <!-- Verificando as 3 colunas -->
                 <% if ((i + 1) % 3 === 0 || (i + 1) === livros.length) { %>
                     </div>
                     <div class="row">
