--- a/views/livro_individual.ejs
+++ b/views/livro_individual.ejs
@@ -35,7 +35,7 @@
             <div class="m-0 p-0">
                 <!-- Botão que leva até a rota de edição para realizar o PUT -->
                 <a href="/livros/<%= livro.id %>/editar"><button class="btn btn-primary col-3" id="">Editar</button></a>
-                <!-- Botão que leva até aciona a rota DELETE -->
+                <!-- Botão que aciona a rota DELETE -->
                 <button class="btn btn-danger col-3" id="deleteButton">Deletar</button>
             </div>            
         </div>
